# simutome

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
notebooks/: dataset.ipynb  dataset_generation.ipynb  parameter_estimation.ipynb  parameters.ipynb
simutome/: __init__.py  _estim.py  _simutome.py  _version.py  estim.py
