[metadata]
name = simutome
url = https://github.com/BodenmillerGroup/simutome
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
license = MIT
description = Tool for simulating consecutive tissue sections
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown

[options]
zip_safe = True
install_requires = 
    numpy
    pandas
    scikit-image>=0.19.0
    tqdm
python_requires = >=3.7,<3.10
packages = find:

# [options.entry_points]
# console_scripts =
#     simutome = simutome.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203
